[package]
name = "ordchr"
version = "0.1.0"
authors = ["rodovia <rodoviabr102@gmail.com>"]
edition = "2018"

[dependencies.cursive]
version = "0.16.3"
default-features = false
features = ["pancurses-backend"]

[dependencies]
gethostname = "0.2.1"
tokio = { version = "1.5.0", features = ["net", "rt", "macros"] }
public-ip = { version = "0.2.0", features = ["dns-resolver"] }
